Fixed layout bug

--- a/stylesheet_indexv3.css
+++ b/stylesheet_indexv3.css
@@ -123,7 +123,7 @@ h4 {
 
 #contact_expand {
 	width: 20em;
-	height: 12.8em;
+	height: auto;
 	max-width: 100%;
 }
 #about_expand {
